--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,11 @@ pnpm-lock.yaml
 
 # Build output
 dist/
+results/
+test-results/
+public/assets/**
+e2e-tests/**/*.zip
+e2e-tests/**/*.md
 
 # Temporary files
 *.tmp
