--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
+  "type": "module",
   "devDependencies": {
-    "@vitest/ui": "^3.1.3",
+    "@playwright/test": "^1.52.0",
+    "http-server": "^14.1.1",
     "jsdom": "^26.1.0",
-    "vitest": "^3.1.3"
+    "playwright": "^1.52.0"
   },
   "scripts": {
+    "clean": "rm -rf dist/* results/*",
     "test": "vitest",
-    "test:report": "vitest --reporter=html"
+    "test:e2e": "npx playwright test --config=config/playwright.config.js",
+    "test:report": "vitest --reporter=html",
+    "start": "http-server ./public -p ${PORT}",
+    "start:app": "http-server ./public -p ${PORT} --mime-type 'text/css' .css",
+    "test:ui": "playwright test",
+    "test:unit": "vitest --exclude e2e-tests/**/*"
+  },
+  "dependencies": {
+    "vitest": "^3.1.3"
   }
 }
