--- a/package.json
+++ b/package.json
@@ -2,21 +2,29 @@
   "type": "module",
   "devDependencies": {
     "@playwright/test": "^1.52.0",
+    "@vitest/ui": "^3.1.3",
     "http-server": "^14.1.1",
     "jsdom": "^26.1.0",
-    "playwright": "^1.52.0"
+    "playwright": "^1.52.0",
+    "vitest": "^3.1.3"
   },
   "scripts": {
     "clean": "rm -rf dist/* results/*",
-    "test": "vitest",
     "test:e2e": "npx playwright test --config=config/playwright.config.js",
-    "test:report": "vitest --reporter=html",
-    "start": "http-server ./public -p ${PORT}",
-    "start:app": "http-server ./public -p ${PORT} --mime-type 'text/css' .css",
-    "test:ui": "playwright test",
-    "test:unit": "vitest --exclude e2e-tests/**/*"
+    "start": "NODE_ENV=${NODE_ENV:-development} http-server ./public -p $(node -e \"console.log(require('./config/constants').CONFIG.PORT)\")",
+    "start:env": "NODE_ENV=development npm start",
+    "start:production": "NODE_ENV=production npm start",
+    "start:staging": "NODE_ENV=staging npm start",
+    "test:e2e:env": "NODE_ENV=test npx playwright test --config=config/playwright.config.js",
+    "test:unit": "vitest tests/unit/vitest/**/*.test.js --run",
+    "test:watch:unit": "vitest --watch tests/unit/vitest/**/*.test.js",
+    "test:watch:e2e": "npx playwright test --watch",
+    "test:clean": "npm run clean && rm -rf test-results/* results/*",
+    "test:ci": "vitest --run",
+    "test:integration": "npm run test -- tests/integration/vitest/**/*.test.js",
+    "test:watch:integration": "vitest --watch tests/integration/vitest/**/*.test.js"
   },
   "dependencies": {
-    "vitest": "^3.1.3"
+    "dotenv": "^16.5.0"
   }
 }
