Aggiorna gli script di test nel package.json per migliorare la configurazione e l'output dei risultati

--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "scripts": {
     "clean": "rm -rf dist/* results/*",
-    "test:e2e": "npx playwright test --config=config/playwright.config.js",
+    "test:e2e": "npx playwright test --config=tests/e2e/playwright/playwright.config.js --output=test-results/e2e",
     "start": "NODE_ENV=${NODE_ENV:-development} http-server ./public -p $(node -e \"console.log(require('./config/constants').CONFIG.PORT)\")",
     "start:env": "NODE_ENV=development npm start",
     "start:production": "NODE_ENV=production npm start",
     "start:staging": "NODE_ENV=staging npm start",
     "test:e2e:env": "NODE_ENV=test npx playwright test --config=config/playwright.config.js",
-    "test:unit": "vitest tests/unit/vitest/**/*.test.js --run",
+    "test:unit": "vitest tests/unit/vitest/*.test.js --run --outputFile=test-results/unit/junit-report.xml",
     "test:watch:unit": "vitest --watch tests/unit/vitest/**/*.test.js",
     "test:watch:e2e": "npx playwright test --watch",
     "test:clean": "npm run clean && rm -rf test-results/* results/*",
-    "test:ci": "vitest --run",
+    "test:ci": "vitest --run --outputFile=test-results/unit/junit-report.xml",
     "test:integration": "npm run test -- tests/integration/vitest/**/*.test.js",
     "test:watch:integration": "vitest --watch tests/integration/vitest/**/*.test.js"
   },
